<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/history3"
        android:layout_width="match_parent"
        android:layout_height="23dp"
        android:layout_margin="5dp"
        android:gravity="end"
        android:maxLines="3"
        android:text=""
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/history2"
        android:layout_width="match_parent"
        android:layout_height="23dp"
        android:layout_margin="5dp"
        android:gravity="end"
        android:maxLines="3"
        android:text=""
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/history"
        android:layout_width="match_parent"
        android:layout_height="23dp"
        android:layout_margin="5dp"
        android:gravity="end"
        android:maxLines="3"
        android:text=""
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/screen"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="5dp"
        android:ellipsize="start"
        android:gravity="end"
        android:maxLines="4"
        android:text=""
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_margin="5dp"
        android:ellipsize="end"
        android:gravity="end"
        android:maxLines="2"
        android:text="Hello!"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/ac"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#9C4125"
            android:text="@string/ac"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/brace_open"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#9C4125"
            android:text="@string/brace_open"
            android:textSize="30sp"
            android:textStyle="bold" />


        <Button
            android:id="@+id/brace_close"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#9C4125"
            android:text="@string/brace_close"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/divide"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#9C4125"
            android:text="@string/division"
            android:textSize="30sp"
            android:textStyle="bold" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/n7"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#222B61"
            android:text="@string/_7"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/n8"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#222B61"
            android:text="@string/_8"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/n9"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#222B61"
            android:text="@string/_9"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/multiply"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#9C4125"
            android:text="@string/multiply"
            android:textSize="30sp"
            android:textStyle="bold" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/n4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#222B61"
            android:text="@string/_4"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/n5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#222B61"
            android:text="@string/_5"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/n6"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#222B61"
            android:text="@string/_6"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/subtract"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#9C4125"
            android:text="@string/subtract"
            android:textSize="30sp"
            android:textStyle="bold" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/n1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#222B61"
            android:text="@string/_1"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/n2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#222B61"
            android:text="@string/_2"
            android:textSize="30sp"
            android:textStyle="bold" />


        <Button
            android:id="@+id/n3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#222B61"
            android:text="@string/_3"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/addition"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#9C4125"
            android:text="@string/addition"
            android:textSize="30sp"
            android:textStyle="bold" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/back"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#222B61"
            android:src="@drawable/backspace"
            android:text=""
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/n0"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#222B61"
            android:text="@string/_0"
            android:textSize="30sp"
            android:textStyle="bold" />


        <Button
            android:id="@+id/decimal"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#222B61"
            android:text="@string/decimal"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/equals"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#9C4125"
            android:text="@string/equals"
            android:textSize="30sp"
            android:textStyle="bold" />


    </LinearLayout>


</LinearLayout>